--- a/crates/server/static/index.html
+++ b/crates/server/static/index.html
@@ -11,6 +11,7 @@
   <body>
     <h1>Eggercise</h1>
     <p>Hello world!</p>
+    <p id="online-state"></p>
 
     <script type="module">
       const registerServiceWorker = async () => {
@@ -43,7 +44,7 @@
           );
         }
       };
-      registerServiceWorker();
+      registerServiceWorker();      
     </script>
   </body>
 </html>
