--- a/crates/server/static/index.html
+++ b/crates/server/static/index.html
@@ -6,42 +6,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Eggercise gym planner" />
     <link rel="stylesheet" href="css/base.css" />
-    <!-- <link rel="modulepreload" src="wasm/service_worker.js" /> -->
   </head>
   <body>
     <h1>Eggercise</h1>
     <p>Hello world!</p>
-    <p id="online-state"></p>
+    <div id="update_container"></div>
 
     <script type="module">
       const registerServiceWorker = async () => {
         if ('serviceWorker' in navigator) {
-          const n_before = (await navigator.serviceWorker.getRegistrations()).length;
-          navigator.serviceWorker.register(
-            'wasm/service_worker.js',
-            {
-              type: 'classic',
-              scope: '/',
-            }
-          ).then(
-            (registration) => {
-              if (registration.installing) {
-                console.log('Service worker installing');
-              } else if (registration.waiting) {
-                console.log('Service worker installed');
-              } else if (registration.active) {
-                console.log('Service worker active');
-              }
-            },
-            (error) => {
-              console.error(`Service worker registration failed with error: ${error}`);
-              navigator.serviceWorker.getRegistrations().then(registrations => {
-                for (let i = n_before; i < registrations.length; i++) {
-                  registrations[i].unregister();
-                }                
+          function handle_update(registration) {
+            console.log(`waiting=${registration.waiting != null}, installing=${registration.installing != null}, active=${registration.active != null}`);
+            
+            if (registration.waiting && registration.active) {
+              console.log('Service worker needs update');
+
+              const button = document.createElement("button");
+              button.textContent = "Do update";
+              button.onclick = () => registration.waiting.postMessage("SKIP_WAITING");
+
+              document
+                .getElementById("update_container")
+                .appendChild(button);
+
+            } else if (registration.installing) {
+              console.log('Service worker installing');
+              registration.installing.addEventListener('statechange', () => {
+                handle_update(registration);
               });
-            }
+            } 
+          }
+
+          navigator.serviceWorker.register('wasm/service_worker.js', { type: 'classic', scope: '/' })
+            .then(
+              (registration) => {
+                registration.addEventListener('updatefound', () => {
+                  console.log('Service worker updatefound');
+                  handle_update(registration);
+                });
+
+                if (!registration.installing && registration.waiting) {
+                  // In case we missed the updatefound event
+                  handle_update(registration);
+                }
+              },
+              (error) => { console.error(`Service worker registration failed with error: ${error}`); }
           );
+
+          let refreshing = false;
+          // Once the worker updates, refresh the page
+          navigator.serviceWorker.addEventListener('controllerchange', () => {
+            if (!refreshing) {
+              console.log("Service worker changed, refreshing")
+              refreshing = true
+              window.location.reload()
+            }
+          })
         }
       };
       registerServiceWorker();      
