Attempting to get sqlite3 wasm to work. It currently loads in a web-worker with no errors

--- a/crates/server/assets/index.html
+++ b/crates/server/assets/index.html
@@ -9,61 +9,7 @@
     <link rel='modulepreload' href='/wasm/client.js' />
   </head>
   <body>
-    <script type='module'>
-      const registerServiceWorker = async () => {
-        if ('serviceWorker' in navigator) {
-          function handle_update(registration) {
-            console.log(`waiting=${registration.waiting != null}, installing=${registration.installing != null}, active=${registration.active != null}`);
-            
-            if (registration.waiting && registration.active) {
-              console.log('Service worker needs update');
-              
-              // const button = document.createElement('button');
-              // button.textContent = 'Do update';
-              // button.onclick = () => registration.waiting.postMessage('SKIP_WAITING');
-
-              // document
-              //   .getElementById('update_container')
-              //   .appendChild(button);
-              registration.waiting.postMessage('SKIP_WAITING');
-
-            } else if (registration.installing) {
-              console.log('Service worker installing');
-              registration.installing.addEventListener('statechange', () => {
-                handle_update(registration);
-              });
-            } 
-          }
-
-          navigator.serviceWorker.register('wasm/service_worker.js', { type: 'classic', scope: '/' })
-            .then(
-              (registration) => {
-                registration.addEventListener('updatefound', () => {
-                  console.log('Service worker updatefound');
-                  handle_update(registration);
-                });
-
-                if (!registration.installing && registration.waiting) {
-                  // In case we missed the updatefound event
-                  handle_update(registration);
-                }
-              },
-              (error) => { console.error(`Service worker registration failed with error: ${error}`); }
-          );
-
-          let refreshing = false;
-          // Once the worker updates, refresh the page
-          navigator.serviceWorker.addEventListener('controllerchange', () => {
-            if (!refreshing) {
-              console.log('Service worker changed, refreshing')
-              refreshing = true
-              window.location.reload()
-            }
-          })
-        }
-      };
-      registerServiceWorker();
-    </script>
+    <script type='module' src='/js/main.js'></script>
     <script type='module'>
       import init from './wasm/client.js';
       init()
