--- a/crates/server/assets/index.html
+++ b/crates/server/assets/index.html
@@ -6,15 +6,19 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <meta name='description' content='Eggercise gym planner' />
     <link rel='stylesheet' href='/css/base.css' />
+    
+    <!-- Preload sqlite, the client and the main script -->
+    <link rel='modulepreload' href='/js/main.js' />
     <link rel='modulepreload' href='/wasm/client.js' />
+    <link rel='modulepreload' href='/js/sqlite3-worker1-promiser.mjs'/>
+    
+    <!-- Because these are loaded in the worker (module)preload doesn't appear to work -->
+    <link rel="prefetch" href="/js/sqlite3.wasm" />
+    <link rel='prefetch' href='/js/sqlite3-bundler-friendly.mjs' />
+    <link rel='prefetch' href='/js/sqlite3-worker1-bundler-friendly.mjs' />
+    <link rel='prefetch' href='/js/sqlite3-opfs-async-proxy.js' />
   </head>
   <body>
     <script type='module' src='/js/main.js'></script>
-    <script type='module'>
-      import init from './wasm/client.js';
-      init()
-        .then(() => console.log('Client wasm initialized'))
-        .catch((e) => console.error(`Error initializing client wasm: ${e}`));
-    </script>
   </body>
 </html>
