Added OpenProps for css

--- a/crates/server/assets/index.html
+++ b/crates/server/assets/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset='utf-8' />
     <title>Eggercise</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
     <meta name='description' content='Eggercise gym planner' />
-    <link rel='stylesheet' href='/css/base.css' />
+    <link rel='stylesheet' href='/css/main_output.css' />
     
     <!-- Preload sqlite, the client and the main script -->
     <link rel='modulepreload' href='/js/main.js' />
