First pass at a PWA web manifest

--- a/crates/server/assets/index.html
+++ b/crates/server/assets/index.html
@@ -5,6 +5,7 @@
     <title>Eggercise</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
     <meta name='description' content='Eggercise gym planner' />
+    <link rel="manifest" href="/manifest.json" />
     <link rel='stylesheet' href='/css/main_output.css' />
     
     <!-- Preload sqlite, the client and the main script -->
